<resources>
    <string name="app_name" translatable="false">Rush</string>
    <string name="logo_inicial">logo inicial</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="rememberMe">Recuérdame</string>
    <string name="orders">Pedidos</string>
    <string name="profile">Perfil</string>
    <string name="buscar_un_art_culo">Buscar un artículo</string>
    <string name="filtrado_de_locales">filtrado de locales</string>
    <string name="take_picture">Tomar foto</string>
    <string name="get_picture">Elegir foto de la galería</string>
    <string name="choose">Elige una opción</string>
    <string name="cancel">Cancelar</string>
    <string name="toast_no_camera">Este dispositivo no tiene cámara</string>
    <string name="imagen_perfil">Imagen de Perfil</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tel_fono_m_vil">Teléfono Móvil</string>
    <string name="rush">Logo de Rush</string>
    <string name="my_profile">Mi perfil</string>
    <string name="hi">¡Hola, %1$s %2$s!</string>
    <string name="sun">Sol</string>
    <string name="asi_tica">Asiática</string>
    <string name="japonesa">Japonesa</string>
    <string name="americana">Americana</string>
    <string name="espa_ola">Española</string>
    <string name="italiana">Italiana</string>
    <string name="francesa">Francesa</string>
    <string name="india">India</string>
    <string name="rabe">Árabe</string>
    <string name="mexicana">Mexicana</string>
    <string name="boliviana">Boliviana</string>
    <string name="argentina">Argentina</string>
    <string name="peruana">Peruana</string>
    <string name="chilena">Chilena</string>
    <string name="estilo_de_cocina">Estilos de cocina</string>
    <string name="confirmar">Confirmar</string>
    <string name="valoraci_n_y_precio">Valoración y Precio</string>
    <string name="especialidad">Especialidades</string>
    <string name="pizza">Pizza</string>
    <string name="sushi">Sushi</string>
    <string name="hamburguesa">Hamburguesa</string>
    <string name="d_rum">Dürum</string>
    <string name="kebab">Kebab</string>
    <string name="burrito">Burrito</string>
    <string name="tacos_al_pastor">Tacos al Pastor</string>
    <string name="sirloin">Sirloin</string>
    <string name="pasta">Pasta</string>
    <string name="ramen">Ramen</string>
    <string name="filtrar_establecimientos">Filtrar Establecimientos</string>
    <string name="question_1">1. ¿Cómo hago un pedido en la aplicación Rush?</string>
    <string name="question_1_response">R: Para hacer un pedido en Rush, simplemente sigue estos pasos...</string>
    <string name="question_2">2. ¿Puedo realizar pedidos desde múltiples restaurantes simultáneamente en Rush?</string>
    <string name="question_2_response">R: Sí, en Rush tienes la opción de realizar pedidos desde múltiples restaurantes y combinarlos en un solo pedido.</string>
    <string name="question_3">3. ¿Es necesario consumir el pedido en el local?</string>
    <string name="question_3_response">R: No, a través de Rush podrás realizar pedidos para recoger. Así, podrás disfrutar de la misma comida de tu bar o restaurante desde la comodidad de tu casa.</string>
    <string name="question_4">4. ¿Debo pagar por utilizar Rush?</string>
    <string name="question_4_response">R: No, Rush es una aplicación 100% gratuíta para el usuario. Los bares y restaurantes son los que pagar para mostrar sus establecimientos en la aplicación.</string>
    <string name="help_email">Si no hemos resuelto tu duda, puedes contactar con nosotros a través de help@rush.com</string>
    <string name="rush_points">Rush Points:</string>
    <string name="actualizar_tarjeta">Actualizar la tarjeta de crédito</string>
    <string name="numero_tarjeta">Número de Tarjeta de Crédito</string>
    <string name="imagen_de_tarjeta_de_credito">Imagen de tarjeta de credito</string>
    <string name="pass_actual">Contraseña actual</string>
    <string name="nueva_pass">Nueva contraseña</string>
    <string name="repetir_pass">Repetir contraseña</string>
    <string name="toast_password_old_new_matches">La anterior contraseña y la nueva son iguales</string>
    <string name="toast_password_matches">Las dos contraseñas no coinciden</string>
    <string name="toast_password_lenght">La contraseña debe tener al menos 8 caracteres</string>
    <string name="toast_empty_1">Ningún campo puede estar vacío</string>
    <string name="change_pass">Cambio de contraseña</string>
    <string name="sin_pedido">Aún no has pedido nada</string>
    <string name="preparando">Estamos preparando tu pedido</string>
    <string name="recoger_pedido">Ya puedes recoger tu pedido</string>
    <string name="confirmar_recogida">Confirmar recogida</string>
    <string name="start">Inicio</string>
    <string name="datos_incorrectos">Los datos introducidos son incorrectos</string>
    <string name="numero_tarjeta_invalido">El número de tarjeta no es válido</string>
    <string name="actualizado">Se ha actualizado correctamente</string>
    <string name="entrantes">Entrantes</string>
    <string name="primeros">Primeros</string>
    <string name="postres">Postres</string>
    <string name="bebidas">Bebidas</string>
    <string name="seleccione_menu">Seleccione su menú</string>
    <string name="mis_datos">Mis datos</string>
    <string name="cambiar_contraseña">Cambiar contraseña</string>
    <string name="pedidos_anteriores">Pedidos anteriores</string>
    <string name="metodos_de_pago">Métodos de pago</string>
    <string name="idioma">Idioma</string>
    <string name="ayuda">Ayuda</string>
    <string name="select_language">Selecciona tu idioma</string>
    <string name="es">Español</string>
    <string name="en">Inglés</string>
    <string name="eu">Euskera</string>
    <string name="salir_app">Salir de la aplicación</string>
    <string name="seguro_salir">¿Estás seguro de que quieres salir?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="seguro_cerrar">¿Estás seguro de que quieres cerrar la sesión?</string>
    <string name="otra_tarjeta">Añadir otra tarjeta</string>
    <string name="cvv">CVV</string>
    <string name="pagar">Pagar</string>
    <string name="caducidad">Fecha de caducidad</string>
    <string name="aproveche">¡Qué aproveche!</string>
    <string name="entendido">Entendido</string>
    <string name="welcome">Bienvenid@ a Rush</string>
    <string name="welcome_message"> ¡A partir de ahora, podrás pedir comida de cualquier bar o restaurante en un instante!</string>
    <string name="precio_total">Precio Total:</string>
    <string name="euro">€</string>
    <string name="tlt_confirm_activity">Pedido de </string>
    <string name="importe">Importe: </string>
    <string name="n_pedido">Número de pedido: </string>
    <string name="elige_tarjeta">Elige la tarjeta con la que deseas pagar o añade una nueva</string>

</resources>