<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinnerSavedCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <!-- Campos para la nueva tarjeta -->
    <LinearLayout
        android:id="@+id/layoutNewCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_below="@id/spinnerSavedCards"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/editTextCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_tarjeta"
            android:inputType="number"
            android:maxLength="16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextExpiryDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/caducidad"
                android:maxLength="5"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editTextCVV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cvv"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutNewCard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/pagar" />

</RelativeLayout>
